# NERScrapper

./: .gitignore  README.md
nerscrap/: README.rst  pyproject.toml
nerscrap/nerscrap/: main.py
nerscrap/nerscrap/extractors/phones/: abs.py  matcher.py  ner.py  regex.py
nerscrap/nerscrap/filters/: __init__.py  core.py
nerscrap/nerscrap/recognition/phones/: ner.py  regex.py
nerscrap/tests/: test_nerscrap.py
