[tool.poetry]
name = "nerscrap"
version = "0.1.0"
description = ""
authors = ["Uno Yakshi <uno.yakshi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
dynaconf = "^3.1.4"
fastapi = "^0.65.2"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
requests = "^2.25.1"
goose3 = "^3.1.9"
spacy = "^3.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
